# tvfinance

./: .gitignore  AI_DISCLOSURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  TRADINGVIEW_POLICY.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-mcp.txt  requirements.txt  server.py
.github/: dependabot.yml
.github/workflows/: ci.yml  compatibility.yml  docs.yml  release.yml
docs/: getting-started.md  index.md
docs/api/: client.md  models.md  tickers.md
docs/architecture/: overview.md  quality-gates.md
docs/development/: contributing.md  testing.md
docs/guide/: cache.md  cli.md  mcp.md  python.md  troubleshooting.md
docs/project/: audit.md  compatibility.md  roadmap.md
src/tvfinance/: __init__.py  api.py  cli.py  client.py  ticker.py
src/tvfinance/aio/: __init__.py
src/tvfinance/core/: __init__.py  cache.py  contracts.py  exceptions.py  history.py  models.py  session.py  settings.py  transport.py  types.py  validation.py  websocket.py
src/tvfinance/mcp/: __init__.py  __main__.py
src/tvfinance/providers/: __init__.py  capabilities.py  research.py  tradingview.py
tests/: test_package.py
tests/contract/: test_asset_fixtures.py
tests/fixtures/contracts/: symbol_search.json
tests/integration/: test_mcp_transports.py
tests/live/: test_public_endpoints.py
tests/unit/: test_cli.py  test_client.py  test_extended_interfaces.py  test_mcp.py  test_namespaces.py  test_ticker.py
tests/unit/core/: test_cache.py  test_contracts.py  test_curl_websocket.py  test_exceptions.py  test_history.py  test_models.py  test_session.py  test_settings.py  test_transport.py  test_validation.py  test_websocket.py
tests/unit/providers/: test_capabilities.py  test_research.py  test_tradingview.py
