[project]
name = "tvfinance"
version = "2.0.0.dev0"
description = "Typed sync and async tools for financial market data research"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Anonymous Developer" }]
keywords = ["finance", "market-data", "tradingview"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "curl-cffi>=0.15,<1",
    "lxml>=5,<7",
]

[project.optional-dependencies]
cli = ["rich>=13,<15"]
mcp = ["fastmcp>=3.4,<4"]
all = [
    "fastmcp>=3.4,<4",
    "rich>=13,<15",
]

[project.urls]
Documentation = "https://github.com/tvfinance/tvfinance#readme"
Issues = "https://github.com/tvfinance/tvfinance/issues"
Source = "https://github.com/tvfinance/tvfinance"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.0",
    "pytest-cov>=6,<8",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=tvfinance",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["tvfinance"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
pretty = true
show_error_codes = true
warn_unreachable = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/tvfinance"]
