[project]
name = "tvfinance"
version = "26.0.1"
description = "Market data tools for quotes, history, news, screeners, and research"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Henrik", email = "295322314+henrikxyz@users.noreply.github.com" },
]
keywords = ["finance", "market-data", "tradingview"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "curl-cffi>=0.15,<1",
    "lxml>=5,<7",
]

[project.optional-dependencies]
mcp = ["fastmcp>=3.4,<4"]

[project.urls]
Documentation = "https://henrikxyz.github.io/TVFinance/"
Issues = "https://github.com/henrikxyz/TVFinance/issues"
Source = "https://github.com/henrikxyz/TVFinance"
"Provider policy" = "https://github.com/henrikxyz/TVFinance/blob/main/TRADINGVIEW_POLICY.md"
"TradingView terms" = "https://www.tradingview.com/policies/"

[project.scripts]
tvfinance = "tvfinance.cli:main"
tvfinance-mcp = "tvfinance.mcp:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.0",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=6,<8",
    "ruff>=0.15",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
    "mkdocstrings[python]>=0.29,<1",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=tvfinance",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
testpaths = ["tests"]
markers = [
    "live: opt-in checks against public provider endpoints",
]

[tool.coverage.run]
branch = true
source = ["tvfinance"]
omit = ["src/tvfinance/mcp/__main__.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
pretty = true
show_error_codes = true
warn_unreachable = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/tvfinance"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/.github",
    "/*.md",
    "/.gitattributes",
    "/.gitignore",
    "/.python-version",
    "/mkdocs.yml",
    "/pyproject.toml",
    "/uv.lock",
]
